--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,13 @@ body {
   justify-content: center;
 }
 .single-product {
+  width: 95%;
+  height:600px; 
   padding: 10px;
   transition: 0.6s;
   margin: 10px;
+  background-color: rgb(223, 234, 238);
+  /* box-sizing:border-box ; */
   
 }
 .single-product:hover {
@@ -52,6 +56,7 @@ body {
 .product-image {
   width: 150px;
   height: 150px;
+  border-radius: 10px;
 }
 .cart {
   width: 350px;
@@ -62,9 +67,9 @@ body {
   margin-right: 30px;
   position: fixed;
 }
-/* .cart-main {
+.cart-main {
   padding-left: 30px;
-} */
+}
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
