--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body {
   width: 95%;
   height:600px; 
   padding: 10px;
+  border-radius: 10px;
   transition: 0.6s;
   margin: 10px;
   background-color: rgb(223, 234, 238);
@@ -62,7 +63,7 @@ body {
   width: 350px;
   /* border: 1px solid green; */
   padding: 10px;
-  box-shadow: 10px 10px 20px gray;
+  box-shadow: 10px 10px 20px rgb(129, 126, 126);
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
