--- a/css/style.css
+++ b/css/style.css
@@ -2,32 +2,8 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
-/* 
-.search-field {
-  border: none;
-  border-radius: 50px;
-  padding: 5px;
-  outline: none;
-}
-.search-field:hover {
-  outline: none;
-  border: none;
-}
-.search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
-}
-.search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
-} 
-*/
 
+/*.......... All Product.........  */
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -38,6 +14,8 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+/* ........... Single Product ....... */
 .single-product {
   width: 95%;
   height:600px; 
@@ -46,7 +24,6 @@ body {
   transition: 0.6s;
   margin: 10px;
   background-color: rgb(223, 234, 238);
-  /* box-sizing:border-box ; */
   
 }
 .single-product:hover {
@@ -54,11 +31,14 @@ body {
   border-radius: 10px;
   border: 1px solid cyan;
 }
+
+/*.............. Product Image Size ......... */
 .product-image {
   width: 150px;
   height: 150px;
   border-radius: 10px;
 }
+/* ...............My cart Size......... */
 .cart {
   width: 350px;
   /* border: 1px solid green; */
@@ -77,9 +57,9 @@ body {
     grid-template-columns: repeat(1, 1fr);
   }
   .cart {
-    width: 300px;
+    width: 250px;
     /* border: 1px solid green; */
-    padding: 10px;
+    padding: 5px;
     box-shadow: 10px 10px 20px gray;
     border-radius: 5px;
     margin-right: 30px;
